--- a/Week_01.ipynb
+++ b/Week_01.ipynb
@@ -19,8 +19,9 @@
     ">Prerequisites:\n",
     "-MATH 320 (Calculus II)\n",
     "\n",
-    "Feedback, suggestions and student participation are explicitly requested in this course. \n",
-    "\n"
+    "Feedback, suggestions and student participation are explicitly requested in this course.\n",
+    "\n",
+    "Please see the syllabus (posted as the README file on [this course's bitbucket repository](https://bitbucket.org/emkiley/math390/src/9cc3f495e18f3efc2ff6e681b1647835bc66c360?at=master)."
    ]
   },
   {
@@ -108,9 +109,9 @@
     "4. [Roundy: Introduction to Computational Physics](http://www.lulu.com/ca/en/shop/david-roundy/introduction-to-computational-physics/ebook/product-17437845.html) (free ebook)\n",
     "5. [Cunningham: Python in 24 hours](http://voyager.library.uvic.ca/vwebv/holdingsInfo?searchId=5015&recCount=25&recPointer=17&bibId=3208444) (available as ebook from the UVic library)\n",
     "6. [Pierro: Annotated Algorithms in Python](https://books.google.ca/books/about/Annotated_Algorithms_in_Python.html?id=cZyPngEACAAJ&redir_esc=y)\n",
-    "7. Specifically for numerical work there is the classic text [Press etal.: Numerical Recipes](http://www.nr.com) also available from our library!\n",
+    "7. Specifically for numerical work there is the classic text [Press et al.: Numerical Recipes](http://www.nr.com) also available from our library!\n",
     "\n",
-    "A lot of course resources are online, including online tutorials e.g. [codeacademy.org](https://www.codecademy.com/learn/python) or [lernpython.org](http://www.learnpython.org). **You are expected to be resourceful in seeking solutions to complex problems: use these resources and find others too.**"
+    "A lot of course resources are online, including online tutorials e.g. [codeacademy.org](https://www.codecademy.com/learn/python) or [learnpython.org](http://www.learnpython.org). **You are expected to be resourceful in seeking solutions to complex problems: use these resources and find others too.**"
    ]
   },
   {
@@ -132,7 +133,7 @@
     "**Action:** Demonstrate making the _physma_ VM\n",
     "\n",
     "**Homework:** (Homework is meant to be done before the next class.)\n",
-    "* Create your own _physma_ virtual machine  following the [detailed instructions](https://github.com/emkiley/math390/blob/master/physma_virtual_machine.ipynb). "
+    "* Create your own _physma_ virtual machine  following the [detailed instructions](https://bitbucket.org/emkiley/math390/src/9cc3f495e18f3efc2ff6e681b1647835bc66c360/physma_virtual_machine.ipynb?at=master&fileviewer=file-view-default). "
    ]
   },
   {
@@ -271,17 +272,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ipython notebooks, markdown\n",
+    "### jupyter notebooks, markdown\n",
     "\n",
-    "We are using [ipython](http://ipython.org) [notebooks](https://ipython.org/ipython-doc/1/interactive/notebook.html) extensively in this course. These notebooks can be converted to static formats using the _Download as_ option in the _File_ menu or using [nbconvert](https://ipython.org/ipython-doc/1/interactive/nbconvert.html).\n",
+    "We are using [jupyter](http://jupyter.org) [notebooks](http://jupyter-notebook-beginner-guide.readthedocs.io/en/latest/what_is_jupyter.html) extensively in this course. These notebooks can be converted to static formats using the _Download as_ option in the _File_ menu or using [nbconvert](https://nbconvert.readthedocs.io/en/latest/).\n",
     "\n",
-    "Ipython notebook cells come mainly in two variants [ref](https://ipython.org/ipython-doc/1/interactive/notebook.html):\n",
+    "Jupyter (formerly called 'iPython') notebook cells come mainly in two variants [ref](https://ipython.org/ipython-doc/1/interactive/notebook.html):\n",
     "* Text cells allow [basic editing with Markdown](http://nestacms.com/docs/creating-content/markdown-cheat-sheet) and are used to describe the problem, methods, results, conclusions. Markdown cells except [Latex typesetting](http://www.personal.ceu.hu/tex/cookbook.html) for fancy math. [Example.](examples/example_markdown_notebook_essentials.ipynb)\n",
     "* _Code cells_ contain executable python text. \n",
     "\n",
     "The _Help_ menu provides an overview of the _Keyboard shortcuts_ and it very useful to have nearby for frequent reference. \n",
     "\n",
-    "For your homework or any other submission you will provide both the life notebook as well as a static html version. The latter has all the images and plots and the rendering of the markdown cells exacly as you see it when you are submitting the work.\n",
+    "For your homework or any other submission you will provide both the live notebook as well as a static html version. The latter has all the images and plots and the rendering of the markdown cells exacly as you see it when you are submitting the work.\n",
     "\n",
     "__Homework:__ \n",
     "* Install the Anaconda python environment in your _physma_ virtual machine  following the [detailed instructions](https://github.com/fherwig/physmath248_pilot/blob/master/physma_virtual_machine.ipynb). \n",
@@ -313,21 +314,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
