--- a/Topic_01.ipynb
+++ b/Topic_01.ipynb
@@ -119,6 +119,15 @@
    "metadata": {},
    "source": [
     "## Tools\n",
+    "We will spend the next week or so getting set up with the tools we need for doing computational work in this class, which include:\n",
+    "* Your laptop\n",
+    "* The virtual machine--a space on your laptop for running a different OS and filesystem where you'll be doing all of your work  for this class\n",
+    "* The unix command line\n",
+    "* git (distributed version control)\n",
+    "* jupyter notebooks\n",
+    "* a chat room\n",
+    "\n",
+    "More details on each of these follow.\n",
     "\n",
     "### Your laptop\n",
     "You are expected to have some kind of laptop and be able to bring it to class and to the tutorial. The kind (Mac, Windows, Linux) does not matter. If your laptop does not satisfy one or more of the following, please contact the instructor immediately:\n",
@@ -219,7 +228,7 @@
     "These tutorials may differ in which shell and/or command line editor they us. Don't get confused by that.\n",
     "\n",
     "**Homework:** unix command cheat sheet\n",
-    "Familiarize yourself with the CLI, e.g. follow through online resources. Work in a team! Help each other! Look up each command using the `man` command, remind yourself what the command does, try it out, and create a brief reference page for yourself. It should look like this:\n",
+    "Familiarize yourself with the CLI, e.g., follow through online resources. Work in a team! Help each other! Look up each command using the `man` command, remind yourself what the command does, try it out, and create a brief reference page for yourself. It should look like this:\n",
     "```\n",
     "ls - list files and directories\n",
     "mv - move file or directory to different place\n",
