changing order of shell commands in topic 1

--- a/Topic_01.ipynb
+++ b/Topic_01.ipynb
@@ -156,16 +156,11 @@
     "#### the shell\n",
     "The program that provides the command line (not all of the commands) is the shell. A common shell is `bash`. Try `> man bash`. The command line is a unix process. Launching a command on the command line interface (CLI) spawns a child process.\n",
     "\n",
-    "#### file manipulation\n",
+    "#### helpful commands\n",
     "```\n",
-    "  emacs, vi (more powerful) or nano \n",
-    "  more/less/tail/head\n",
-    "  cat\n",
-    "  touch\n",
-    "  cp\n",
-    "  rm\n",
-    "  grep\n",
-    "  wc (-l)\n",
+    "  man (command)\n",
+    "  history\n",
+    "  clear\n",
     "```\n",
     "\n",
     "#### file system\n",
@@ -180,11 +175,16 @@
     "  df (-h)\n",
     "```\n",
     "\n",
-    "\n",
-    "#### helpful commands\n",
+    "#### file manipulation\n",
     "```\n",
-    "  man (command)\n",
-    "  history\n",
+    "  emacs, vi (more powerful) or nano \n",
+    "  more/less/tail/head\n",
+    "  cat\n",
+    "  touch\n",
+    "  cp\n",
+    "  rm\n",
+    "  grep\n",
+    "  wc (-l)\n",
     "```\n",
     "\n",
     "#### networking\n",
