--- a/physma_virtual_machine.ipynb
+++ b/physma_virtual_machine.ipynb
@@ -64,9 +64,9 @@
     "```\n",
     "\n",
     "As we move along we will install more things that we may need, such as:\n",
-    "* the Latex typesetting package\n",
+    "* the LaTeX typesetting package\n",
     "* a fortran or C compiler\n",
-    "* additionl image or movie processessing software\n",
+    "* additional image or movie processing software\n",
     "\n",
     "In any case search for the requested program and then install it. The latter we may have to do as _root_ user (superuser) using the `sudo` command prefix. In this way the new program will be available to all users with accounts on your _physma_ VM (this relates to the multi-user nature of the Linux OS, even if we do not yet need this feature now).\n",
     "\n",
@@ -76,7 +76,7 @@
     "\n",
     "```\n",
     "$ apt search git\n",
-    "$ sudo apt install git\n",
+    "$ sudo apt-get install git\n",
     "```\n",
     "\n",
     "** Example 2:**\n",
@@ -148,21 +148,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
