adding images for jabber help

--- a/Topic_01.ipynb
+++ b/Topic_01.ipynb
@@ -311,7 +311,7 @@
     "\n",
     "__Homework:__\n",
     "\n",
-    "* Sign up for an XMPP ID at an XMPP server of your choice, see <https://xmpp.net/directory.php> for option. Students had success using <http://jabb3r.net> or [https://jabber.hot-chilli.net](https://jabber.hot-chilli.net/account/create). Use an IM client like Swift or Pidgin in your Comp VM. In our class we use the chat room <icp@conference.jabber.org>."
+    "* Sign up for an XMPP ID at an XMPP server of your choice, see <https://xmpp.net/directory.php> for options. This one works well: [https://jabber.hot-chilli.net](https://jabber.hot-chilli.net/account/create). Use an IM client like Swift or Pidgin in your Comp VM. In our class we use the chat room <icp@conference.jabber.org>."
    ]
   },
   {
