add screenshot to join chat

--- a/chatroom_help.ipynb
+++ b/chatroom_help.ipynb
@@ -14,7 +14,13 @@
     "\n",
     "## Start up pidgin\n",
     "\n",
-    "When you installed lubuntu on your VM, several applications were installed for various things. For example, Firefox was installed as the web browser, and AbiWord was installed as a word processor. One program that was installed is called Pidgin, and it is used for chat accounts. Start Pidgin by finding it in the \"Internet\" submenu \n",
+    "When you installed lubuntu on your VM, several applications were installed for various things. For example, Firefox was installed as the web browser, and AbiWord was installed as a word processor. One program that was installed is called Pidgin, and it is used for chat accounts. Start Pidgin by finding it in the \"Internet\" submenu ([screenshot](https://github.com/emkiley/math390/blob/master/images/jabber_whereis.png)).\n",
+    "\n",
+    "Enter your user information [like in this screenshot](https://github.com/emkiley/math390/blob/master/images/jabber_account_setup.png), making sure you use your own username (and the name of the XMPP server you chose, if it wasn't the same one I chose). Enter your password if you want.\n",
+    "\n",
+    "## Use pidgin to join our class's chat room\n",
+    "\n",
+    "When you are logged in, join our chat room by selecting Buddies > Join a Chat, and  \n",
     "\n"
    ]
   }
