--- a/chatroom_help.ipynb
+++ b/chatroom_help.ipynb
@@ -20,7 +20,9 @@
     "\n",
     "## Use pidgin to join our class's chat room\n",
     "\n",
-    "When you are logged in, join our chat room by selecting Buddies > Join a Chat, and enter our chat room's address [like in this screenshot](https://github.com/emkiley/math390/blob/master/images/jabber_joinchat.png). You don't need to type a password, and your \"Handle\" can be anything your classmates can use to identify you (I think you kn \n",
+    "When you are logged in, join our chat room by selecting Buddies > Join a Chat, and enter our chat room's address [like in this screenshot](https://github.com/emkiley/math390/blob/master/images/jabber_joinchat.png). Your \"Handle\" can be anything you want, but it's helpful if your classmates and instructors can identify you.\n",
+    "\n",
+    "## Chat away.\n",
     "\n"
    ]
   }
